# yew-merging-board

./: Cargo.toml  README.md
.github/workflows/: publish-demo.yml
demo/: Cargo.toml  Makefile  index.html  make-piece-css.py
demo/css/: cburnett.css  chessground.base.css  chessground.brown.css  chessground.cburnett.css
demo/src/: main.rs
engine/: Cargo.toml
engine/src/: lib.rs
frontend-board/: Cargo.toml
frontend-board/src/: board.rs  board_bg.rs  lib.rs
logic/: Cargo.toml
logic/src/: board_repr.rs  lib.rs  pieces.rs  square.rs  strategy.rs
logic/src/pieces/: movement.rs
multiplayer-server/: Cargo.toml  Makefile
multiplayer-server/api/: Cargo.toml
multiplayer-server/api/src/: lib.rs  matchmaking.rs  play.rs
multiplayer-server/frontend/: Cargo.toml  index.html
multiplayer-server/frontend/src/: game.rs  main.rs  matchmaker.rs
multiplayer-server/src/: game.rs  main.rs  managers.rs  matchmaking.rs
paper/: .gitignore  Makefile  citations.bib  journal.docx  paper.tex  review.docx
src/: board.rs  board_bg.rs  board_repr.rs  lib.rs  pieces.rs  square.rs
src/pieces/: movement.rs
