[package]
name = "yew-merging-board"
version = "0.1.0"
edition = "2021"

[dependencies]
arrayvec = "0.7.4"
log = "0.4.21"
shadow-clone = "1.2.1"
yew = "0.21.0"
yew-autoprops = "0.4.1"
yew-hooks = "0.3.2"

[dev-dependencies]
yew = { version = "0.21.0", features = ["csr"] }

[workspace]
members = [
    ".",
    "demo"
]
