[package]
name = "yew-merging-board"
version = "0.1.0"
edition = "2021"

[dependencies]
arrayvec = "0.7.4"
log = "0.4.21"
shadow-clone = "1.2.1"
wasm-bindgen = "0.2.92"
web-sys = { version = "0.3.69", features = ["HtmlElement"] }
yew = "0.21.0"
yew-autoprops = "0.4.1"
yew-hooks = "0.3.2"
merging-board-logic = { path = "../logic" }
