[package]
name = "multiplayer-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
merging-board-logic = { path = "../logic", features = ["serde"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["tracing-log"] }
tower-http = { version = "0.5.2", features = ["fs", "trace", "tracing"] }
tower = "0.4.13"
clap = { version = "4.5.7", features = ["derive"] }
