[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
api = { path = "../api" }
log = "0.4.21"
wasm-logger = "0.2.0"
yew = { version = "0.21.0", features = ["csr"] }
yew-merging-board = { path = "../../frontend-board" }
merging-board-logic = { path = "../../logic" }
yew-router = "0.18.0"
yew-hooks = "0.3.2"
yew-autoprops = "0.4.1"
serde_json = "1.0.117"
